chapel-lang.org/docs/1.27/_sources/modules/standard/GPUDiagnostics.rst.txt
.. default-domain:: chpl

.. module:: GPUDiagnostics
   :synopsis: Supports counting and reporting GPU operations.

GPUDiagnostics
==============
**Usage**

.. code-block:: chapel

   use GPUDiagnostics;


or

.. code-block:: chapel

   import GPUDiagnostics;

Supports counting and reporting GPU operations.

.. warning::

  This module is unstable and its interface is subject to change in the
  future.


.. record:: chpl_gpuDiagnostics

   
   Aggregated GPU operation counts.
   


   .. attribute:: var kernel_launch: uint(64)

.. type:: type gpuDiagnostics = chpl_gpuDiagnostics

   
   The Chapel record type inherits the runtime definition of it.
   

.. function:: proc startVerboseGPU()

   
   Start on-the-fly reporting of GPU operations initiated on any locale.
   

.. function:: proc stopVerboseGPU()

   
   Stop on-the-fly reporting of GPU operations initiated on any locale.
   

.. function:: proc startGPUDiagnostics()

   
   Start counting GPU operations across the whole program.
   

.. function:: proc stopGPUDiagnostics()

   
   Stop counting GPU operations across the whole program.
   

.. function:: proc resetGPUDiagnostics()

   
   Reset aggregate GPU operation counts across the whole program.
   

.. function:: proc getGPUDiagnostics()

   
   Retrieve aggregate GPU operation counts for the whole program.
   
   :returns: array of counts of GPU ops initiated on each locale
   :rtype: `[LocaleSpace] gpuDiagnostics`
   

